--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ highlighter:         pygments
 
 # Permalinks
 permalink:           /:title
+future: true
 
 # Setup
 timezone:            your timezone # eg. Asia/Kathmandu
